worked on connecting model to database and controller to model and controller to client

--- a/client/hrsf89-chatterbox-client-solution/client/index.html
+++ b/client/hrsf89-chatterbox-client-solution/client/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- dependencies -->
+    <script src="bower_components/backbone/backbone.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <script>
       // YOU DO NOT NEED TO EDIT THIS CODE
       if (!/(&|\?)username=/.test(window.location.search)) {
